--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -1500,13 +1500,12 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 #keypad {
-
 	position: absolute;
-	top: 50%;
+	top: 40%;
 	transform: translateY(-60%);
 	width: 250px;
 	height: 200px;
-	right: 5px;
+	right: 10px;
 }
 
 .go-to-container {
@@ -1516,7 +1515,7 @@ input[type=number]::-webkit-outer-spin-button {
 	transform: translateY(-60%);
 	width: 250px;
 	height: 200px;
-	right: 5px;
+	right: 10px;
 }
 
 .go-to-container div {
@@ -1582,9 +1581,34 @@ input[type=number]::-webkit-outer-spin-button {
     color: #fff;
     text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
     border: 1px solid rgba(0,0,0,0.3);
-	border-radius: 4px;
+	border-radius: 4px 0 0 4px;
     box-shadow: inset 0 -5px 45px rgba(100,100,100,0.2), 0 1px  1px rgba(255,255,255,0.2);
 }
+.zero-button{
+	color: #eee;
+	position: absolute;
+    right: -34px;
+    font-size: 23px;
+    top: 0;
+    padding: 3px 5px 3px;
+    background-color: #DB8635;
+    border-radius: 0 4px 4px 0;
+    box-shadow: 0px 2px 0px #ce6402, 0px 2px 4px rgba(0,0,0,.7);
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+    font-family: 'source_sans_proextralight';
+    transition: all .1s ease;
+}
+
+.zero-button:active {
+	top: 1px; 
+	box-shadow: 0px 1px 0px #ce6402, 0px 1px 1px rgba(0,0,0,.9);
+	position: absolute;
+	color: #eee;
+}
+
+
+
+
 
 .read-out-container input:focus {
 	background: rgba(0,0,0,0.3);
