--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -1227,25 +1227,32 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 	background-color: #D48B3A;
 }
 
+.pad-container{
+	display: flex;
+	justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .keypad-table {
-	display: inline-block;
-	width: 74%;
-	height: 100%;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	height: 200px;
+    width: 200px;
 }
 
 .z-pad {
-	display: inline-block;
-	width: 24%;
-	height: 100%;
+	width: 55px;
 }
 
 
 .keypad-cell {
 	margin: 0;
-	padding: 0;
-	width: 32%;
-	height: 32%;
-	display: inline-block;
+    padding: 0;
+    height: 33%;
+    width: 33%;
+
 }
 
 
@@ -1288,9 +1295,12 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 }
 
 .fixed-input-container{
+	display: flex;
+	justify-content: space-evenly;
 	display: none;
 	margin-bottom: 10px;
 	text-align: left;
+	min-height: 45px;
 }
 
 .fixed-input-container label {
@@ -1428,30 +1438,32 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 	transform: translate(-50%, -50%) rotate(135deg);
 }
 
-#keypad {
-	position: absolute;
-	top: 40%;
-	transform: translateY(-60%);
-	width: 250px;
-	height: 200px;
-	right: 10px;
+.manual-right-side-container {
+	width: 50%;
+	height: 289px;
+}
+
+.go-to-container, #keypad{
+	flex-direction: column;
+	justify-content: space-evenly;
+	width: 90%;
+	height: 100%;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .go-to-container {
 	display: none;
-	position: absolute;
-	top: 50%;
-	transform: translateY(-60%);
-	width: 250px;
-	height: 200px;
-	right: 10px;
+}
+
+#keypad{
+	display: flex;
 }
 
 .go-to-container div {
 	cursor: pointer;
 	position: relative;
 	width: 100%;
-	margin: 0.5rem;
 	border-radius: 5px;
 	color: #eee;
 
@@ -1481,66 +1493,75 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 
 
 .read-out-container {
-	width : 40%;
+	display: flex;
+    flex-direction: column;
+	width: 50%;
+	justify-content: space-evenly;
+}
+
+.axis {
 	display: inline-block;
-	position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
+	font-size: 0;
+	position: relative;
+	text-align: center;
 }
 
 .read-out-container label {
-	width: 100%;
+	display: inline-block;
 	font-size: 1.65rem;
-	float: left;
-	background-color: #333;
-	border: none;
+    background-color: #333;
+    border: none;
 	color: #eee;
+	margin-right: 10px;
 }
 
 .read-out-container .units, .read-out-container .rotunits {
-	font-size: 12px;
-    text-transform: lowercase;
-    vertical-align: baseline;
-    position: absolute;
-    right: 20px;
+		font-size: 12px;
+		text-transform: lowercase;
+		vertical-align: baseline;
+		margin-left: -15px;
+		position: absolute;
+		color: #fff;
+		width: 10px;
 }
 
 .read-out-container input {
-	float: right;
-	font-family: 'Droid_Sans_Mono';
-	width: 80%;
-	text-align: center;
-	height: auto;
+    margin: 0;
+    font-family: 'Droid_Sans_Mono';
+    width: 60%;
+    text-align: center;
+    height: auto;
+    display: inline-block;
     font-size: 23px;
-	padding: 5px;
+    padding: 5px;
     background: rgba(0,0,0,0.3);
     border: none;
     outline: none;
     color: #fff;
     text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
     border: 1px solid rgba(0,0,0,0.3);
-	border-radius: 4px 0 0 4px;
-    box-shadow: inset 0 -5px 45px rgba(100,100,100,0.2), 0 1px  1px rgba(255,255,255,0.2);
+    border-radius: 4px 0 0 4px;
+    box-shadow: inset 0 -5px 45px rgba(100,100,100,0.2), 0 1px 1px rgba(255,255,255,0.2);
 }
 .zero-button{
 	color: #eee;
-	position: absolute;
-    right: -34px;
+    display: inline-block;
     font-size: 23px;
-    top: 0;
+    margin: 0;
+    width: 50px;
     padding: 3px 5px 3px;
     background-color: #DB8635;
     border-radius: 0 4px 4px 0;
     box-shadow: 0px 2px 0px #ce6402, 0px 2px 4px rgba(0,0,0,.7);
     text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
     font-family: 'source_sans_proextralight';
-    transition: all .1s ease;
+	transition: all .1s ease;
+	vertical-align:top;
 }
 
 .zero-button:active {
-	top: 1px; 
+	margin-top: 1px;
 	box-shadow: 0px 1px 0px #ce6402, 0px 1px 1px rgba(0,0,0,.9);
-	position: absolute;
 	color: #eee;
 }
 
@@ -1678,71 +1699,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
     animation: chipflythree .5s .4s ease infinite;
 }*/
 
-.drobuttonOuter{
-    position: relative;
-    margin-top: 4px;
-    margin-left: 4px;
-    width: 36px;
-    height: 36px;
-    border: 2.5px solid #FEFEFE;
-    border-radius: 50%;
 
-}
-
-.drobuttonInnerL{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    width: 23px;
-    height: 23px;
-    border: 2.5px solid #FEFEFE;
-    border-radius: 50%;
-
-}
-
-.drobuttonInnerS{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    width: 10px;
-    height: 10px;
-    border: 2.5px solid #FEFEFE;
-    border-radius: 50%;
-    animation: width .4s linear;
-}
-
-@keyframes pulse {
-    0% {
-        -webkit-box-shadow: 0px 0px 0px 1px #FEFEFE;
-    -moz-box-shadow: 0px 0px 0px 1px #FEFEFE;
-    box-shadow: 0px 0px 0px 1px #FEFEFE;
-    }
-
-    100%{
-         -webkit-box-shadow: 0px 0px 0px 13px #FEFEFE;
-    -moz-box-shadow: 0px 0px 0px 13px #FEFEFE;
-    box-shadow: 0px 0px 0px 13px #FEFEFE;
-    opacity: .2;
-    }
-}
-
-@keyframes width {
-     0% {
-       width: 10px ;
-       height: 10px;
-    }
-
-    50%{
-       width: 36px;
-       height: 36px;
-    }
-    100%{
-       width: 10px;
-       height: 10px;
-    }
-}
 
 
 .manual-drive-modal {
@@ -1765,9 +1722,13 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 }
 
 .manual-drive-container {
-	position: relative;
-	width: 100%;
-	height: 100%;
+	display: flex;
+	position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+	transform: translate(-50%, -50%);
+	width: 90%;
 }
 
 
@@ -1783,9 +1744,45 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 		width: 100%; 
 		height: 100%;
 		max-height: none;
+		padding-top: 0;
 	}
 
-	.read-out-container {
+	.manual-drive-container {
+		flex-direction: column;
+		justify-content: center;
+		top: 7%;
+		transform: translate(-50%, 0%);
+	}
+
+	.read-out-container, .manual-right-side-container{
+		width: 100%;
+		min-height: 220px;
+	}
+
+	.go-to-container {
+		flex-direction: row;
+	}
+
+	.go-to-container div {
+		height: 20%;
+		width: 0;
+	}
+
+	.go-to {
+		flex-grow: 2;
+	}
+
+	.set-coordinates {
+		flex-grow: 1;
+	}
+
+	.manual-drive-message {
+		font-size: 15px;
+		line-height: 16px;
+		padding-top: 0;
+	}
+
+	/* .read-out-container {
 		width: 70%;
 		display: block;
 		position: relative;
@@ -1835,7 +1832,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 	.set-coordinates {
 		width: 25% !important;
 		height: 50%;
-	}
+	} */
 }
 
 
