--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -1240,8 +1240,8 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	height: 200px;
-    width: 200px;
+	height: 180px;
+    width: 180px;
 }
 
 .z-pad {
@@ -1301,13 +1301,169 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 	color:#BCBCBC;
 }
 
+
+.speed_read_out {
+	position: absolute;
+	color: #DB8635;
+	display: none;
+	z-index: 10000;
+}
+/* range input  */
+
+input[type='range'] {
+  border: solid 1em transparent;
+  padding: 0;
+  height: 2em;
+  border-radius: 0.25em;
+  background: transparent;
+  color: #262626;
+  font-size: 1em;
+  cursor: pointer;
+}
+input[type='range'], input[type='range']::-webkit-slider-runnable-track, input[type='range']::-webkit-slider-thumb {
+  -webkit-appearance: none;
+}
+input[type='range']::-webkit-slider-runnable-track {
+  box-sizing: border-box;
+  padding: 0.75em;
+  width: 100%;
+  height: 2em;
+  border-radius: 1.25em;
+  box-shadow: inset 0 1px 0.125em #272727, inset 0 -1px 0.125em #272727, inset 0 0 0 0.75em #333;
+  background: linear-gradient(#1c1c1c, #333) content-box;
+}
+.js input[type='range']::-webkit-slider-runnable-track {
+  background: linear-gradient(#e38928, #DB8635) no-repeat content-box, linear-gradient(#1c1c1c, #333) content-box;
+  background-size: 100% 100%;
+}
+input[type='range']::-moz-range-track {
+  box-sizing: border-box;
+  padding: 0.75em;
+  width: 100%;
+  height: 2em;
+  border-radius: 1.25em;
+  box-shadow: inset 0 1px 0.125em #272727, inset 0 -1px 0.125em #272727, inset 0 0 0 0.75em #333;
+  background: linear-gradient(#1c1c1c, #333) content-box;
+}
+input[type='range']::-ms-track {
+  border: none;
+  box-sizing: border-box;
+  padding: 0.75em;
+  width: 100%;
+  height: 2em;
+  border-radius: 1.25em;
+  box-shadow: inset 0 1px 0.125em #272727, inset 0 -1px 0.125em #272727, inset 0 0 0 0.75em #333;
+  background: linear-gradient(#1c1c1c, #333) content-box;
+  color: transparent;
+}
+input[type='range']::-moz-range-progress {
+  padding: 0.75em 1px 0.75em 0.75em;
+  height: 1em;
+  border-radius: 1.25em 0 0 1.25em;
+  background: linear-gradient(#e38928, #DB8635) no-repeat content-box;
+}
+input[type='range']::-ms-fill-lower {
+  border-radius: 1.25em 0 0 1.25em;
+  background: linear-gradient(#e38928, #DB8635) no-repeat content-box;
+}
+input[type='range']::-webkit-slider-thumb {
+  margin-top: -0.75em;
+  box-sizing: border-box;
+  border: none;
+  padding: 0.75em;
+  width: 2em;
+  height: 2em;
+  border-radius: 50%;
+  box-shadow: 0 1px 0.125em #232323, inset 0 1px 1px #444444;
+  background: radial-gradient(#db7e0d 35%, #cb8037 71%) content-box, linear-gradient(#333333, #272727) border-box;
+  cursor: ew-resize;
+}
+input[type='range']::-moz-range-thumb {
+  box-sizing: border-box;
+  border: none;
+  padding: 0.75em;
+  width: 2em;
+  height: 2em;
+  border-radius: 50%;
+  box-shadow: 0 1px 0.125em #232323, inset 0 1px 1px #444444;
+  background: radial-gradient(#db7e0d 35%, #DB8635 71%) content-box, linear-gradient(#333333, #272727) border-box;
+  cursor: ew-resize;
+}
+input[type='range']::-ms-thumb {
+  box-sizing: border-box;
+  border: none;
+  padding: 0.75em;
+  width: 2em;
+  height: 2em;
+  border-radius: 50%;
+  box-shadow: 0 1px 0.125em #232323, inset 0 1px 1px #444444;
+  background: radial-gradient(#db7e0d 35%, #DB8635 71%) content-box, linear-gradient(#333333, #272727) border-box;
+  cursor: ew-resize;
+}
+[class*='webkit'] input[type='range'] {
+  border-top-width: 3.75em;
+  border-left-width: 5em;
+}
+[class*='webkit'] input[type='range']::-webkit-slider-runnable-track, [class*='webkit'] input[type='range'] /deep/ #track, [class*='webkit'] input[type='range']::-webkit-slider-thumb, [class*='webkit'] input[type='range'] /deep/ #thumb {
+  position: relative;
+}
+[class*='webkit'] input[type='range']::-webkit-slider-runnable-track:before, [class*='webkit'] input[type='range'] /deep/ #track:before, [class*='webkit'] input[type='range']::-webkit-slider-thumb:before, [class*='webkit'] input[type='range'] /deep/ #thumb:before, [class*='webkit'] input[type='range']::-webkit-slider-runnable-track:after, [class*='webkit'] input[type='range'] /deep/ #track:after, [class*='webkit'] input[type='range']::-webkit-slider-thumb:after, [class*='webkit'] input[type='range'] /deep/ #thumb:after {
+  position: absolute;
+}
+[class*='webkit'] input[type='range']::-webkit-slider-runnable-track:before, [class*='webkit'] input[type='range'] /deep/ #track:before, [class*='webkit'] input[type='range']::-webkit-slider-runnable-track:after, [class*='webkit'] input[type='range'] /deep/ #track:after {
+  top: 50%;
+  right: 100%;
+}
+[class*='webkit'] input[type='range']::-webkit-slider-runnable-track:before, [class*='webkit'] input[type='range'] /deep/ #track:before {
+  box-sizing: border-box;
+  border: solid 0;
+  border-width: 0.46875em 0.46875em 0 0;
+  padding: 0.46875em 0.46875em 0 0;
+  width: 1.875em;
+  height: 1.875em;
+  border-radius: 0 100% 0 0;
+  transform: translate(-25%, -50%) rotate(45deg);
+  background: radial-gradient(at 0 100%, transparent 0.70313em, #262626 0.70313em) content-box;
+  content: '';
+}
+[class*='webkit'] input[type='range']::-webkit-slider-runnable-track:after, [class*='webkit'] input[type='range'] /deep/ #track:after {
+  height: 0.76923em;
+  transform: translate(-150%, -50%);
+  font: 3.25em / 0.61538em DejaVu Sans, Symbola, Everson Mono, Dingbats, Segoe UI Symbol, Quivira, SunExt-A, FreeSerif, Universalia, unifont;
+  content: '\1f508';
+}
+[class*='webkit'] input[type='range']::-webkit-slider-thumb:before, [class*='webkit'] input[type='range'] /deep/ #thumb:before, [class*='webkit'] input[type='range']::-webkit-slider-thumb:after, [class*='webkit'] input[type='range'] /deep/ #thumb:after {
+  left: 50%;
+}
+[class*='webkit'] input[type='range']::-webkit-slider-thumb:before, [class*='webkit'] input[type='range'] /deep/ #thumb:before {
+  width: 1em;
+  height: 1em;
+  transform: translate(-50%, -2.625em) rotate(62deg) skewX(34deg) scaleY(cos(34deg));
+  background: linear-gradient(135deg, transparent 50%, #292929 50%, #1b1b1b);
+  content: '';
+}
+[class*='webkit'] input[type='range']::-webkit-slider-thumb:after, [class*='webkit'] input[type='range'] /deep/ #thumb:after {
+  padding: 0 0.5em;
+  border-radius: 0.375em;
+  transform: translate(-50%, -4em);
+  background: linear-gradient(#454545, #292929);
+  color: white;
+  font: 700 1em / 2 arial, sans-serif;
+  text-align: center;
+  content: '4:00';
+}
+input[type='range']:focus {
+  outline: none;
+}
+
 .fixed-input-container{
 	display: flex;
 	justify-content: space-evenly;
 	display: none;
+	padding-top: 20px;
 	margin-bottom: 10px;
 	text-align: left;
-	min-height: 45px;
+	min-height: 60px;
 }
 
 .fixed-input-container label {
@@ -1787,6 +1943,10 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 		font-size: 15px;
 		line-height: 16px;
 		padding-top: 0;
+	}
+
+	.speed_read_out {
+		padding-top: 35px;
 	}
 
 	/* .read-out-container {
