--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -213,6 +213,7 @@ box-shadow: 0px 2px 3px 0px rgba(235,228,235,1);
 
 
 #right-position-container {
+	cursor: pointer;
 	background-color: #931B14;
 	height: 100%;
     position: absolute;
